// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Render must match isChecked() 1`] = `
<div
  className="m-0 form-checkbox"
  data-test={null}
>
  <label
    htmlFor="checkbox"
  >
    <input
      aria-describedby="help-text-for-checkbox"
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
    is checked
  </label>
</div>
`;

exports[`<Checkbox /> Render must match isCheckedInactive() 1`] = `
<div
  className="m-0 form-checkbox checkbox-inactive"
  data-test={null}
>
  <label
    htmlFor="checkbox"
  >
    <input
      aria-describedby="help-text-for-checkbox"
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
    is checked
  </label>
</div>
`;

exports[`<Checkbox /> Render must match isNotChecked() 1`] = `
<div
  className="m-0 form-checkbox"
  data-test={null}
>
  <label
    htmlFor="checkbox"
  >
    <input
      aria-describedby="help-text-for-checkbox"
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    is not checked
  </label>
</div>
`;

exports[`<Checkbox /> Render must match isNotCheckedInactive() 1`] = `
<div
  className="m-0 form-checkbox checkbox-inactive"
  data-test={null}
>
  <label
    htmlFor="checkbox"
  >
    <input
      aria-describedby="help-text-for-checkbox"
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    is not checked
  </label>
</div>
`;
